--- a/styles/style.css
+++ b/styles/style.css
@@ -1274,13 +1274,15 @@ h3 {
   margin-bottom: 10px;
 }
 .case-hero__title {
-  font-family: "Inter", sans-serif;
+  font-family: "Campaign-serif", serif;
   font-weight: 700;
+  /* font-weight: 500; */
   font-size: 60px;
-  line-height: 120%;
+  line-height: 110%;
   letter-spacing: 0.005em;
   color: var(--color-text);
   margin: 0;
+  padding-bottom: 20px;
 }
 
 /* --- Case Overview & Context --- */
