Change the color of the icons

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
 
   --color-top-card-bg: #d8edc3;
   --color-top-card-icon-bg: #a7d680;
-  --color-top-card-icon-bg-path: #115e59;
+  --color-top-card-icon-bg-path: #345222;
 
   /* ⚙️ Layout / system tokens */
   --scrollbar-gutter: stable;
